--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -315,8 +315,8 @@
 // Responsive layout for mobile and tablets
 @media screen and (max-width: 768px) {
   .container.project-page {
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+    padding-left: 3em;
+    padding-right: 3em;
 
     h1.page-title {
       margin-left: 40px;
@@ -348,8 +348,8 @@
 
 @media screen and (max-width: 480px) {
   .container.project-page {
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
 
     h1.page-title {
       margin-left: 60px;
@@ -362,6 +362,7 @@
       padding-right: 0;
       margin-left: 0;
       margin-top: 0;
+      gap: 2rem;
     }
 
     .project-item {
